<resources>

    <string name="feedback_help">To send feedback or report bugs, just shake your phone! A feedback form will open on your screen, and you can send a screenshot and log of the problem you encountered.</string>
    <string name="app_name">TALS</string>
    <string name="stay_logged_in_help">Your CAS Username/Password combination will not be saved, only a Moodle access token will be stored in the database. This token can only be used with the moodle attendance plugin.</string>
    <string name="help1">1) Login with your THM CAS Account.</string>
    <string name="help2">2) Chose an appointment in the list of appointments.</string>
    <string name="help3">3) If the pin is enabled, you can enter it and confirm your attendance</string>
    <string name="help4">Tip: Swipe down to reload</string>
    <string name="about">This application was created by Johannes Meintrup as a software project for Dr. habil. Frank Kammer at the THM Gießen in WS18. For more information visit our entry in the THM wiki: https://wiki.thm.de/THM-Wiki/TALS</string>
    <string name="token_not_valid">Token not valid - please login again :(</string>
    <string name="network_error">Network error :(</string>
    <string name="cas_authentication_error">Wrong username/password :(</string>
    <string name="login_failed_message">Oops, login failed :(</string>
    <string name="menu_item_logout">Logout User</string>
    <string name="menu_item_help">Help</string>
    <string name="blank"/>
    <string name="menu_item_feedback">Send us feedback</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_exit">Exit</string>
    <string name="prompt_user">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_pin">Pin</string>
    <string name="enter_pin">Confirm</string>
    <string name="action_sign_in">Login</string>
    <string name="stay_logged_in">Stay logged in</string>
    <string name="currently_signing_in">Logging in&#8230;</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_incorrect_password">Wrong password</string>
    <string name="error_username_required">Please enter CAS username</string>
    <string name="error_password_required">Please enter password</string>
    <string name="missed_days_formatted">I confirm that i missed %d appointments.</string>
    <string name="missed_days_default">I confirm that i missed 0 appointments.</string>
    <string name="sending_pin">Sending&#8230;</string>
    <string name="enter_pin_error">Please enter pin</string>
    <string name="confirm_missing_days">Please confirm missing days</string>
    <string name="pin_confirmed">Attendance confirmed!</string>
    <string name="pin_not_confirmed">Confirmation failed - wrong pin?</string>
    <string name="pin_enabled">Pin enabled</string>
    <string name="pin_disabled">Pin not enabled</string>
    <string name="generic_error">Network Error :(</string>
    <string name="cas_protocol_error">CAS protocol error - maybe the connection failed?</string>
    <string name="already_attending">You successfully confirmed your attendance! </string>
    <string name="no_courses">You don\'t have any appointments today - maybe you should just go home? ¯\\_(ツ)_/¯</string>
    <string name="unknownCourse" />
    <string name="course_list_title">Today's appointments</string>
    <string name="feedbackEmail">thmtals@gmail.com</string>
</resources>