<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.thm.mni.tals.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/preloadProgressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/loginForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/logo"
            android:clickable="true"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="60dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/landscape"
            android:adjustViewBounds="true"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_marginHorizontal="8dp"
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/errorTextView"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/usernameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_user"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/passwordEditTExt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/loginButton"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/saveTokenCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stay_logged_in"
                    android:layout_gravity="left"/>

                <ImageView
                    android:id="@+id/safety_hint"
                    android:paddingLeft="4dp"
                    android:paddingTop="2dp"
                    android:layout_width="28dp"
                    android:layout_height="26dp"
                    android:layout_gravity="left"
                    android:clickable="true"
                    android:tint="@color/supportRed"
                    app:srcCompat="@drawable/help_outline24" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
